--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -12,7 +12,7 @@
 	</div>
 	<div class="aboutme" id="about">
 		<div class="aboutme_container">
-			<img class="profilepic" ng-src="data/images/profile.jpg"/>
+			<img class="profilepic" ng-src="data/images/profile2.jpg"/>
 			<h2>Zhengbang Chen</h2>
 			<p><a ng-href="http://giphy.com/embed/UTvN95v5LlnUI">A designer-engineer hybrid</a></p>
 		</div>
@@ -48,15 +48,8 @@
 	<div class="myworks" id="works">
 		<div class="myworks_container">
 			<h2>My Works</h2>
-			<h3>Inspired by the elegance of human</h3>
+			<p>Inspired by the elegance of human</p>
 			<div class="thumbnails">
-				<div class="thumb_nail">
-					<div class="thumb_nail_container">
-						<a ng-href='/apps' target="_self"></a>
-						<h5>Apps & Projects</h5>
-						<p>Innovation, curation and realization.</p>
-					</div>
-				</div>
 				<div class="thumb_nail">
 					<div class="thumb_nail_container">
 						<a ng-href="https://medium.com/@zhengbangchen/learning-to-be-design-dev-hybrid-100-designs-9c61a93b145"></a>
@@ -66,30 +59,51 @@
 				</div>
 				<div class="thumb_nail">
 					<div class="thumb_nail_container">
+						<a ng-href="http://zhengbangc.github.io/wayfair-match"></a>
+						<h5>Wayfair Match</h5>
+						<p>Hackathon Project during my summer internship at Wayfair. It's a tinder for furniture to promote sales. </p>
+					</div>
+				</div>
+				<div class="thumb_nail">
+					<div class="thumb_nail_container">
+						<a ng-href="http://zhengbangc.github.io/sapphire"></a>
+						<h5>IMDB Top 100</h5>
+						<p>Built with AngularJS, this app allows user to browse, filter and search for movies in IMDB's Top 100 Moives </p>
+					</div>
+				</div>
+				<div class="thumb_nail">
+					<div class="thumb_nail_container">
+						<a ng-href="https://www.youtube.com/watch?v=b1415lmek-E"></a>
+						<h5>Scheduler</h5>
+						<p>Built with AngularJS, NodeJS and MongoDB, this app allow studetns to choose classes and built a calendar</p>
+					</div>
+				</div>
+				<div class="thumb_nail">
+					<div class="thumb_nail_container">
+						<a ng-href="http://zhengbangc.github.io/luvletter_zappos"></a>
+						<h5>Zappos Interview Challenge</h5>
+						<p>This responsive site was for Zappos Interview Challenge in Fall 2015</p>
+					</div>
+				</div>
+				<div class="thumb_nail">
+					<div class="thumb_nail_container">
+						<a ng-href="http://zhengbangc.github.io/golden"></a>
+						<h5>Golden</h5>
+						<p>Built with AngularJS, NodeJS and MongoDB, this is a responsive demo app for a personal gallery</p>
+					</div>
+				</div>
+				<div class="thumb_nail">
+					<div class="thumb_nail_container">
 						<a ng-href="https://www.instagram.com/zhengbangc/?hl=en"></a>
 						<h5>Photographs</h5>
-						<p>Crystal clear with a shallow depth of field.</p>
-					</div>
-				</div>
-				<div class="thumb_nail">
-					<div class="thumb_nail_container">
-						<a ng-href="/"></a>
-						<h5>Writings & Inspirations</h5>
-						<p>Emotions... all great designs appeal to emotions.</p>
-					</div>
-				</div>
-				<div class="thumb_nail">
-					<div class="thumb_nail_container">
-						<a ng-href="/"></a>
-						<h5>C'est La Vie</h5>
-						<p>Carpe Diem!</p>
+						<p>Crystal clear with a shallow depth of field. 45mm, F1.8, Olympus</p>
 					</div>
 				</div>
 				<div class="thumb_nail">
 					<div class="thumb_nail_container">
 						<a ng-href="https://www.youtube.com/watch?v=NHfbzp7VBcI"></a>
 						<h5>Film: Invisible Lover</h5>
-						<p>Montage about a dark love story</p>
+						<p>Montage about a dark love story. Final projects for Media and Cinematic Studies class.</p>
 					</div>
 				</div>
 			</div>
@@ -98,7 +112,7 @@
 		
 	<div class="contactme">
 			<div class="eyeimg"><img src="data/images/close.svg"></div>
-			<h3>Let's inspire each other</h3>
+			<p>Let's inspire each other</p>
 			<a ng-href="https://github.com/zhengbangc">Github</a> /
 			<a ng-href="https://www.linkedin.com/in/zhengbangchen">LinkedIn</a> /
 			<a ng-href="https://mail.google.com/mail/?view=cm&fs=1&to=zchen94@illinois.edu">Email</a> <br>
