--- a/source_sass/_base.scss
+++ b/source_sass/_base.scss
@@ -199,9 +199,9 @@ $openSans: 'Open Sans', Helvetica, sans-serif;
 				@include translateY(-50%);
 			}
 			.profilepic{
-				border-radius: 50%;			
+				border-radius: 30px;	
 				display: block;
-				width: 55%;
+				width: 50%;
 				margin-bottom: 20px;
 				margin-left: auto;
 				margin-right: auto;
@@ -237,7 +237,10 @@ $openSans: 'Open Sans', Helvetica, sans-serif;
 				margin-top: -10px;
 				font-weight: 300;
 				text-decoration: none;
-				margin-bottom: 30px;
+				margin-bottom: 0;
+				@include breakpoint (small only) {
+					margin-bottom: 30px;					
+				}
 				a{
 					color: #808080;
 					border-bottom: dotted 1px #aeaeae;
@@ -362,16 +365,17 @@ $openSans: 'Open Sans', Helvetica, sans-serif;
 			h2 {
 				font-family: 'Lemon Milk';
 				text-align: center;
-				font-size: 40px;
+				font-size: 25pt;
 				font-weight: 400;
 				color: #C5B358;
 			}
-			h3{
+			p{
 				font-family: $openSans;
 				color: #606060;
 				letter-spacing: 1px;
 				text-align: center;
-				margin-top: 5px;
+				margin-top: -10px;
+				margin-bottom: 30px;
 				font-weight: 300;
 				font-size: 20px;
 				@include breakpoint (large) {
@@ -382,7 +386,7 @@ $openSans: 'Open Sans', Helvetica, sans-serif;
 				margin-top: 20px;
 				width: 100%;
 				margin: auto;
-				max-width: 1000px;
+				max-width: 900px;
 				padding: 0 5px;
 				.thumb_nail{
 					opacity:0;
@@ -391,29 +395,31 @@ $openSans: 'Open Sans', Helvetica, sans-serif;
 					@include translateY(-10px);
 					cursor: pointer;
 					@include breakpoint(small){
-						height:150px;
 						width: 50%;
 						float: left;
 					}
 					@include breakpoint(medium){
-						height: 200px;
+						width: percentage(1/3);
 						padding: 10px 10px 10px 10px;
 					}
 					@include breakpoint(large){
-						width: percentage(1/3);
-						height: 200px;
+						
 					}
+					pointer-events: none;
 					&.appear{
+						pointer-events: auto;
 						@include translateY(0px);
 						opacity: 1;
 						@include transition(all 0.5s ease-in-out);
 						&:hover{
 							@include scale(1.03, 1.03);
-							@include transition(all 0.25s ease-out);
 							.thumb_nail_container {
+								-webkit-box-shadow: 6px 10px 19px -5px rgba(0,0,0,0.75);
+								-moz-box-shadow: 6px 10px 19px -5px rgba(0,0,0,0.75);
+								box-shadow: 6px 10px 19px -5px rgba(0,0,0,0.75);
 								background-color: rgba(0,0,0, 0.8);
 								h5{
-									color: #C5B358;
+									opacity: 0;
 								}
 								p{
 									@include transition(all 0.4s ease-in-out);
@@ -433,71 +439,89 @@ $openSans: 'Open Sans', Helvetica, sans-serif;
 						background-color: rgba(0,0,0,0.5);
 						background-blend-mode: overlay;
 						position: relative;
-						h5{
-							position: absolute;
-							@include breakpoint(small){
-								left: 10px;
-								top: 5px;
+							h5{
+								@include transition(opacity 0.25s ease-in);
+								position: absolute;
+								top: 50%;
+								@include translateY(-50%);
+								text-align: center;
+								width: 100%;
+								color: white;
+								@include breakpoint(small){
+									font-size: 25px;
+									font-weight: 600;
+									color: #C5B358;
+								}
+								@include breakpoint(medium){
+									font-size: 25px;
+								}
+								font-family: $openSans;
+								letter-spacing: 0.8px;
+							}
+							p{
+								position: absolute;
+								top: 50%;
+								@include translateY(-50%);
+								left: 0;
+								right: 0;
+								@include transition(all 0.75s ease-out);
+								@include breakpoint(small){
+									display: none;
+								}
+								@include breakpoint(medium){
+									display: block;
+								}
+								margin: auto;
+								opacity:0;
+								font-family: $openSans;
+								font-weight: 400;
+								letter-spacing: 0.8px;
+								color: white;
+								width: 90%;
 								font-size: 18px;
-							}
-							@include breakpoint(medium){
-								left: 20px;
-								top: 13px;
-								font-size: 20px;
-							}
-							font-family: $openSans;
-							letter-spacing: 0.8px;
-							color: white;
-						}
-						p{
-							@include breakpoint(small){
-								display: none;
-							}
-							@include breakpoint(medium){
-								display: block;
-							}
-							position: absolute;
-							opacity:0;
-							font-family: 'Roboto Slab', garamond, serif;
-							letter-spacing: 0.8px;
-							color: white;
-							top: 45px;
-							left: 20px;
-							width: 80%;
-							font-size: 18px;
-						} 
+							} 
 					}
 					&:nth-child(1){
-						.thumb_nail_container {
-							background-image: url('../data/images/project_sapphire.png');
-						}
-					}
-					&:nth-child(2){
 						.thumb_nail_container {
 							background-image: url('../data/images/work_designs.png');
 						}
 					}
+					&:nth-child(2){
+						.thumb_nail_container {
+							background-image: url('../data/images/project_wayfair_match.png');
+						}
+					}
 					&:nth-child(3){
 						.thumb_nail_container {
-							background-image: url('../data/images/work_photos.png');
+							background-image: url('../data/images/project_sapphire.png');
 						}
 					}
 					&:nth-child(4){
-						cursor: default;
 						.thumb_nail_container {
-							background-image: url('../data/images/work_writings.png');
+							background-image: url('../data/images/project_scheduler.png');
 						}
 					}
 					&:nth-child(5){
-						cursor: default;
 						.thumb_nail_container {
-							background-image: url('../data/images/cestlavie.png');
+							background-image: url('../data/images/project_zappos.png');
 						}
 					}
 					&:nth-child(6){
 						.thumb_nail_container {
+							background-image: url('../data/images/golden.png');
+						}
+					}
+					&:nth-child(7){
+						.thumb_nail_container {
+							background-image: url('../data/images/photographs.jpg');
+						}
+						padding-bottom: 30px;
+					}
+					&:nth-child(8){
+						.thumb_nail_container {
 							background-image: url('../data/images/work_montage.png');
 						}
+						padding-bottom: 30px;
 					}
 				}
 			}
@@ -551,7 +575,7 @@ $openSans: 'Open Sans', Helvetica, sans-serif;
 			background-color: transparent;
 			.project_container {
 				border: dotted 2px rgba(189, 178, 119, 0.8);
-				border-radius: 6px;
+				border-radius: 2px;
 				overflow: hidden;
 				position: relative;
 				@include transition(box-shadow 0.4s ease-in-out);
