--- a/source_sass/_mixins.scss
+++ b/source_sass/_mixins.scss
@@ -66,4 +66,6 @@
     background: -o-linear-gradient(rgba(0, 0, 0, 0.55), rgba(0, 0, 0, 0.55)), url('../data/images/fixed-background-small.jpg') no-repeat; /* For Opera 11.1 to 12.0 */
     background: -moz-linear-gradient(rgba(0, 0, 0, 0.55), rgba(0, 0, 0, 0.55)), url('../data/images/fixed-background-small.jpg') no-repeat; /* For Firefox 3.6 to 15 */
     background: linear-gradient(rgba(0, 0, 0, 0.55), rgba(0, 0, 0, 0.55)), url('../data/images/fixed-background-small.jpg') no-repeat; /* Standard syntax */
+	background-position: center center;
+	background-size: cover;
 }
