--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -28,7 +28,7 @@
 					<h5>President</h5>
 					<span class="fa fa-angle-right"></span>
 					<h7>Institute of Electrical and Electronic Engineers, May 2016 - Present</h7>
-					<p>Lead and oversee the executive board of <a ng-href="https://ieee.illinois.edu/">Institute of Electrical and Electronic Engineers (IEEE)</a> at optimal to produce inspiring techincal, professional and social events to the general student body. Sustain organizational relations with university departments, other RSOs and companies. Promote advancement and development of members' technical and academic well-being.</p>
+					<p>Lead and oversee the executive board of <a ng-href="https://ieee.illinois.edu/">Institute of Electrical and Electronic Engineers (IEEE), UIUC</a> at optimal to produce inspiring techincal, professional and social events to the general student body. Sustain organizational relations with university departments, other student organizations and companies. Promote advancement and development of members' technical and academic well-being.</p>
 				</li>
 				<li>
 					<h5>Front-end Developer</h5>
@@ -67,8 +67,8 @@
 				<div class="thumb_nail">
 					<div class="thumb_nail_container">
 						<a ng-href="http://zhengbangc.github.io/sapphire"></a>
-						<h5>IMDB Top 100</h5>
-						<p>Built with AngularJS, this app allows user to browse, filter and search for movies in IMDB's Top 100 Moives </p>
+						<h5>IMDB Top 250</h5>
+						<p>Built with AngularJS, this app allows user to browse, filter and search for movies in IMDB's Top 250 Moives </p>
 					</div>
 				</div>
 				<div class="thumb_nail">
