--- a/source_sass/_base.scss
+++ b/source_sass/_base.scss
@@ -135,6 +135,11 @@ $openSans: 'Open Sans', Helvetica, sans-serif;
 		text-align: center;
 		color: white;
 		position: relative;
+		&.lower_intro_background_level {
+			&:before {
+				z-index: -2;
+			}
+		}
 		&:before {
 			content: '';
 			width: 100%;
@@ -328,7 +333,6 @@ $openSans: 'Open Sans', Helvetica, sans-serif;
 					p{
 						position: relative;
 						font-family: 'Open Sans', garamond, serif;
-						/*letter-spacing: 1px;*/
 						&.extended{
 							height: auto;
 							opacity: 1;
@@ -340,8 +344,6 @@ $openSans: 'Open Sans', Helvetica, sans-serif;
 						}
 						z-index: -1;
 						height: 0px;
-						/*@include transition(height 0.3s ease-in-out );*/
-						/*@include transition(opacity 0.1s ease-in-out );*/
 						opacity: 0;
 						a{
 							border-bottom: dotted 1px #aeaeae;
@@ -360,10 +362,25 @@ $openSans: 'Open Sans', Helvetica, sans-serif;
 	}
 	.myworks {
 		width: 100%;
-		background-color: #f9f9f9;
 		padding: 40px 0 5px 0;
+		position: relative;
 		@include breakpoint (large) {
 			padding: 40px 0 30px 0;
+		}
+		&:before {
+			content: '';
+			position: fixed;
+			z-index: -2;
+			@include linear-gradient-background();	
+			top: 0;
+			left: 0;
+			width: 100%;
+			height: 100%;
+			-webkit-filter: blur(10px);
+			-moz-filter: blur(10px);
+			-o-filter: blur(10px);
+			-ms-filter: blur(10px);
+			filter: blur(10px);
 		}
 		.myworks_container{
 			overflow: hidden;
@@ -464,7 +481,6 @@ $openSans: 'Open Sans', Helvetica, sans-serif;
 								}
 								@include breakpoint(medium){
 									font-size: 30px;
-									// color: #C5B358;
 								}
 								letter-spacing: 0.8px;
 							}
@@ -540,11 +556,6 @@ $openSans: 'Open Sans', Helvetica, sans-serif;
 				}
 			}
 		}
-	}
-
-	.myskills {
-		// height: 100vh;
-		// width: 100vw;
 	}
 }
 
