--- a/source_sass/_base.scss
+++ b/source_sass/_base.scss
@@ -442,14 +442,15 @@ $openSans: 'Open Sans', Helvetica, sans-serif;
 					@include breakpoint(small){
 						width: 50%;
 						float: left;
+						pointer-events: auto;
 					}
 					@include breakpoint(medium){
 						opacity:0;
 						@include translateY(-10px);
 						width: percentage(1/3);
 						padding: 10px 10px 10px 10px;
+						pointer-events: auto;
 					}
-					pointer-events: none;
 					&.appear{
 						pointer-events: auto;
 						@include translateY(0px);
@@ -463,7 +464,7 @@ $openSans: 'Open Sans', Helvetica, sans-serif;
 								box-shadow: 0 8px 19px -5px rgba(0,0,0,0.85);
 								background-color: rgba(0,0,0, 0.8);
 								h5{
-									@include breakpoint (large) {
+									@include breakpoint (medium) {
 										opacity: 0;										
 									}
 								}
